--- a/trump/templates/search.html
+++ b/trump/templates/search.html
@@ -12,6 +12,6 @@
     </form>
 
     {% if query %}
-        <h3>Search results for: {{ query|safe }}</h3>
+        <h3>Search results for: {{ query }}</h3>
     {% endif %}
 {% endblock %}
